session-12-kubernetes-ingress-configmaps-secrets/ingress/apps.yaml
# Two small apps + ClusterIP Services for them
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
spec:
  replicas: 2
  selector:
    matchLabels: {app: app1}
  template:
    metadata:
      labels: {app: app1}
    spec:
      containers:
        - name: web
          image: hashicorp/http-echo:1.0
          args: ["-text=Hello from APP 1"]
          ports: [{containerPort: 5678}]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
spec:
  replicas: 2
  selector:
    matchLabels: {app: app2}
  template:
    metadata:
      labels: {app: app2}
    spec:
      containers:
        - name: web
          image: hashicorp/http-echo:1.0
          args: ["-text=Hello from APP 2"]
          ports: [{containerPort: 5678}]
---
apiVersion: v1
kind: Service
metadata:
  name: app1-svc
spec:
  selector: {app: app1}
  ports: [{port: 80, targetPort: 5678}]
---
apiVersion: v1
kind: Service
metadata:
  name: app2-svc
spec:
  selector: {app: app2}
  ports: [{port: 80, targetPort: 5678}]
